<resources>
    <string name="app_name">WatFit</string>
    <string name="title_home">Home</string>
    <string name="title_fitness_tracker">Fitness Tracker</string>
    <string name="title_fitness_dashboard">Fitness Dashboard</string>
    <string name="title_start">WatFit Sign-In</string>
    <string name="title_login">Account Login</string>
    <string name="title_register">Account Register</string>
    <string name="title_basic_diameter">Body Diameter</string>
    <string name="intake_text">Calorie Intake</string>
    <string name="exercise_textview">Exercise</string>
    <string name="body_diameter_textview">Body Diameter</string>
    <string name="search_hint">Enter Your Food</string>
    <string name="food_amount_hint">Consumed amount</string>
    <string name="calorie_intake_estimate">Estimated Calorie is</string>
    <string name="add_button_text">Add</string>
    <string name="submit_button_text">Submit</string>
    <string name="exercise_search_hint">Enter your exercise</string>
    <string name="exercise_time_hint">Exercise time in minutes</string>
    <string name="exercise_calorie">Estimated calorie burnt:</string>
    <string name="daily_exercise_calorie">Your daily consumption is:</string>
    <string name="total_calorie">Your daily calorie intake is:</string>
    <string name="title_recipe_generator">Recipe Generator</string>
    <string name="title_training_scheduler">Training Scheduler</string>
    <string name="title_recommendations">Recommendations</string>
    <string name="title_social_sharing">Social Sharing</string>
    <string name="navbar_recommendations">Recommendations</string>
    <string name="navbar_social_sharing">Social Sharing</string>
    <string name="navbar_recipe_generator">Recipe Generator</string>
    <string name="navbar_plan_generator">Plan Generator</string>
    <string name="title_password_reset">Change Your Password</string>
    <string name="title_account">My Profile</string>
    <string name="title_fitness_goal">Set Fitness Goals</string>
    <string name="title_public_posting">Public Posting</string>
    <string name="title_shared_with_me">Shared With Me</string>
    <string name="button_Regenerate">Regenerate</string>
    <string name="button_Preference_bar">Set Preference</string>
    <string name="title_null"></string>
    <string name="title_edit_post">Create Post</string>
    <string name="title_about">About WatFit</string>
    <string name="title_fitness_scheduler">Fitness Scheduler</string>
    <string name="dashboard_summary">Here is a summary for this week </string>
    <string name="recipe">Recipe</string>
    <string-array name="calorie_list">
        <item>Select a range...</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="protein_list">
        <item>Select a range...</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="fat_list">
        <item>Select a range...</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="carbohydrates_list">
        <item>Select a range...</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="dietary_exercise_log_chart">Intake and Exercise Trend</string>
    <string-array name="exercise_type_list">
        <item>Select an exercise type</item>
        <item>indoor</item>
        <item>outdoor</item>
    </string-array>
    <string-array name="intensity_list">
        <item>Select an intensity level</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

</resources>