<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_recipeGenerator"
        android:icon="@drawable/common_google_signin_btn_icon_light_normal"
        android:title="@string/title_recipe_generator" />
    <item
        android:id="@+id/navigation_training_scheduler"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:title="@string/title_training_scheduler" />
    <item
        android:id="@+id/navigation_recommendations"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:title="@string/title_recommendations" />
    <item
        android:id="@+id/navigation_social_sharing"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:title="@string/title_social_sharing" />
</menu>