<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout android:id="@+id/header_linearlayout_nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/navbar_recommendations" />

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/navbar_social_sharing" />

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/navbar_recipe_generator" />

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/navbar_plan_generator" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
