<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.tracker.CalorieFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <android.widget.SearchView
    android:id="@+id/searchView"
    android:queryHint="@string/search_hint"
        android:background="@android:color/darker_gray"
    android:iconifiedByDefault="false"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
    app:layout_constraintTop_toTopOf="parent"
    />
    <EditText
        android:id="@+id/estimateCalorie"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="Enter your comsumed amount here"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintBottom_toTopOf="@+id/calorieHint" />
    <TextView
        android:id="@+id/calorieHint"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/calorie_intake_estimate"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/calorieInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estimateCalorie"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_1"/>
    <TextView
        android:id="@+id/calorieInput"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="300"
        android:textSize="15sp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintStart_toEndOf="@+id/calorieHint"
        app:layout_constraintTop_toBottomOf="@+id/estimateCalorie"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_1"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/add_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/estimateCalorie"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_1" />

    <TextView
        android:id="@+id/calorieTotalText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/total_calorie"
        android:textSize="15sp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/calorieTotal"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintBottom_toTopOf="@id/submitButton"/>

    <TextView
        android:id="@+id/calorieTotal"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="300"
        android:textSize="15sp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintStart_toEndOf="@+id/calorieTotalText"
        app:layout_constraintBottom_toTopOf="@id/submitButton"/>
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/submit_button_text"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>