<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.tracker.ExerciseFragment">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.78" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <android.widget.SearchView
        android:id="@+id/searchViewExercise"
        android:queryHint="@string/exercise_search_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_round_bg"
        android:textColorHint="@color/dark_gray_1"
        android:textColor="@android:color/black"
        android:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/estimateTime"
        />

    <ListView
        android:id="@+id/exerciseListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false"
        app:layout_constraintTop_toBottomOf="@+id/searchViewExercise" />

    <TextView
        android:id="@+id/textViewExerciseSelected"
        android:layout_width="100dp"
        android:layout_height="47dp"
        android:layout_marginLeft="30dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/estimateTime" />
    <EditText
        android:id="@+id/estimateTime"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/exercise_time_hint"
        android:background="@drawable/edittext_round_bg"
        android:textColorHint="@color/dark_gray_1"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/searchViewExercise"
        app:layout_constraintBottom_toTopOf="@+id/exerciseCalorieText" />
    <TextView
        android:id="@+id/exerciseCalorieText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/exercise_calorie"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/calorieExercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estimateTime"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_1"/>
    <TextView
        android:id="@+id/calorieExercise"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintStart_toEndOf="@+id/exerciseCalorieText"
        app:layout_constraintTop_toBottomOf="@+id/estimateTime"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_1"/>

    <Button
        android:id="@+id/addButtonExercise"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/add_button_text"
        android:textColor="@color/gold_4"
        android:textStyle="bold"
        android:background="@drawable/button_rounded_corner_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/estimateTime"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_1" />

    <ListView
        android:id="@+id/exerciseSelectList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:isScrollContainer="false"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_1"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal_3"
    />

    <TextView
        android:id="@+id/calorieTotalExerciseText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/daily_exercise_calorie"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/calorieTotalExercise"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintBottom_toTopOf="@id/submitButtonExercise"/>

    <TextView
        android:id="@+id/calorieTotalExercise"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintStart_toEndOf="@+id/calorieTotalExerciseText"
        app:layout_constraintBottom_toTopOf="@id/submitButtonExercise"/>
    <Button
        android:id="@+id/submitButtonExercise"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_submit_24dp"
        android:text="@string/submit_button_text"
        android:textColor="@color/gold_4"
        android:textStyle="bold"
        android:background="@drawable/button_rounded_corner_bg"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/dateButtonExercise"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.43"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/submitButtonExercise"
        app:layout_constraintTop_toBottomOf="@+id/calorieTotalExercise" />
</androidx.constraintlayout.widget.ConstraintLayout>